force-app/main/default/objects/Campaign/fields/Accutics_AffiliatePartner_ID__c.field-meta.xml
<CustomField>
    <fullName>Accutics_AffiliatePartner_ID__c</fullName>
    <description>Certain Accutics records will contain values in a field called &quot;Affiliate Partner ID&quot; that needs to be available on the Campaign object</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Affiliate Partner ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>