force-app/main/default/objects/Campaign/fields/Accutics_AffiliatePlatform__c.field-meta.xml
<CustomField>
    <fullName>Accutics_AffiliatePlatform__c</fullName>
    <description>Accutics Affiliate Platform - Derived from the Accutics System, this information is pivotal for Campaign-to-Lead mapping purposes</description>
    <label>Accutics Affiliate Platform</label>
    <length>255</length>
    <type>Text</type>
</CustomField>