force-app/main/default/objects/Campaign/fields/Accutics_AffiliateType__c.field-meta.xml
<CustomField>
    <fullName>Accutics_AffiliateType__c</fullName>
    <description>Accutics Affiliate Type - Derived from the Accutics System, this information is Affiliate Type for Campaign-to-Lead mapping purposes</description>
    <label>Accutics Affiliate Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>