force-app/main/default/objects/Campaign/fields/Accutics_BDPartner__c.field-meta.xml
<CustomField>
    <fullName>Accutics_BDPartner__c</fullName>
    <description>Accutics BD Partner - Derived from the Accutics System, this information holds DB partners info for Campaign-to-Lead mapping purposes</description>
    <label>Accutics BD Partner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>