force-app/main/default/objects/Campaign/fields/Accutics_ID__c.field-meta.xml
<CustomField>
    <fullName>Accutics_ID__c</fullName>
    <description>Accutics ID - Derived from the Accutics System, this information holds Accutics ID for Campaign-to-Lead mapping purposes</description>
    <externalId>true</externalId>
    <label>Accutics ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>