force-app/main/default/objects/Campaign/fields/Accutics_LeadCampaign__c.field-meta.xml
<CustomField>
    <fullName>Accutics_LeadCampaign__c</fullName>
    <description>Accutics ID - Derived from the Accutics System, this information holds Campaign info for Campaign-to-Lead mapping purposes</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Accutics Lead Campaign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>