force-app/main/default/objects/Campaign/fields/Accutics_LeadChannel__c.field-meta.xml
<CustomField>
    <fullName>Accutics_LeadChannel__c</fullName>
    <description>Accutics ID - Derived from the Accutics System, this information holds Lead Channel info for Campaign-to-Lead mapping purposes</description>
    <label>Accutics Lead Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>