force-app/main/default/objects/Campaign/fields/Accutics_LeadFunnelStage__c.field-meta.xml
<CustomField>
    <fullName>Accutics_LeadFunnelStage__c</fullName>
    <description>Accutics Funnel Stage - Derived from the Accutics System, this information holds Funnel Stage info for Campaign-to-Lead mapping purposes</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Accutics Lead Funnel Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>