force-app/main/default/objects/Campaign/fields/Accutics_LeadMedium__c.field-meta.xml
<CustomField>
    <fullName>Accutics_LeadMedium__c</fullName>
    <description>Accutics Lead Medium - Derived from the Accutics System, this information holds Lead Medium info for Campaign-to-Lead mapping purposes</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Accutics Lead Medium</label>
    <length>255</length>
    <type>Text</type>
</CustomField>