force-app/main/default/objects/Campaign/fields/Accutics_LeadSource__c.field-meta.xml
<CustomField>
    <fullName>Accutics_LeadSource__c</fullName>
    <description>Accutics Lead Source - Derived from the Accutics System, this information holds Lead Source info for Campaign-to-Lead mapping purposes</description>
    <label>Accutics Lead Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>