force-app/main/default/objects/Campaign/fields/Accutics_Type__c.field-meta.xml
<CustomField>
    <fullName>Accutics_Type__c</fullName>
    <description>Derived from the Accutics System, Accutics Type to the campaign object which will map to the Lead Record Type once we map the fields between campaign and lead objects.</description>
    <label>Accutics Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>