force-app/main/default/objects/Campaign/fields/Accutics_UpdateStatus__c.field-meta.xml
<CustomField>
    <fullName>Accutics_UpdateStatus__c</fullName>
    <description>The status to track the accutics data sync between lead and campaign</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Accutics Update Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>