force-app/main/default/objects/Campaign/fields/Accutics_URL_OfConversion__c.field-meta.xml
<CustomField>
    <fullName>Accutics_URL_OfConversion__c</fullName>
    <description>Accutics URL Of Conversion - Derived from the Accutics System, this information holds URL data for Campaign-to-Lead mapping purposes</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Accutics Appended URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>