force-app/main/default/objects/Campaign/validationRules/Prevent_Delete_Clone_Edit_For_Non_Admins.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Delete_Clone_Edit_For_Non_Admins</fullName>
    <active>true</active>
    <description>Prevent cloning and editing of campaign records with Accutics ID for non-admin and non-integration users.</description>
    <errorConditionFormula>NOT(
            $Profile.Name = &quot;System Administrator&quot; ||
            $Profile.Name = &quot;Integration User&quot; ||
            $Profile.Name = &quot;Analytics Cloud Integration User&quot; ||
            $Profile.Name = &quot;API Integration&quot; ||
            $Profile.Name = &quot;Biztech-BSA&quot; ||
            $Profile.Name = &quot;Gusto Integration Profile&quot; ||
            $Profile.Name = &quot;Marketo Integration&quot; ||
            $Profile.Name = &quot;Minimum Access - API Only Integrations&quot; ||
            $Profile.Name = &quot;Salesforce API Only System Integrations&quot; ||
            $Profile.Name = &quot;SalesforceIQ Integration User&quot; ||
            $Profile.Name = &quot;Sales Insights Integration User&quot; ||
            $Profile.Name = &quot;ZP API Connection&quot; ||
            $Profile.Name = &quot;ZP System Administrator&quot;
        ) &amp;&amp;
        NOT(ISBLANK(Accutics_ID__c)) &amp;&amp;
        (ISCLONE() || NOT(ISNEW()))</errorConditionFormula>
    <errorMessage>Cloning and editing of campaign records with Accutics ID for non-admin and non-integration users is not allowed.</errorMessage>
</ValidationRule>